Fix compiler warnings (#714)
* Fix compiler warnings

Remove unused variables (or use them), fix doc references, and replace Timer with DispatcherTimer to void Disposable warnings.

* Add note on workaround

--- a/src/Toolkit/Toolkit.Maui/Esri.ArcGISRuntime.Toolkit.Maui.csproj
+++ b/src/Toolkit/Toolkit.Maui/Esri.ArcGISRuntime.Toolkit.Maui.csproj
@@ -18,6 +18,7 @@
         <Nullable>annotations</Nullable>
         <WindowsSdkPackageVersion Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(WinAppSDKVersion)','1.6.240923002'))">10.0.19041.38</WindowsSdkPackageVersion> <!-- Workaround for older .NET SDKs. Not needed with VS17.12+  -->
         <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+        <NoWarn>$(NoWarn);CS9270</NoWarn> <!-- Workaround for https://github.com/dotnet/maui/issues/33866 -->
     </PropertyGroup>
 
     <ItemGroup>
