--- a/src/Toolkit/Toolkit.UWP/Esri.ArcGISRuntime.Toolkit.UWP.csproj
+++ b/src/Toolkit/Toolkit.UWP/Esri.ArcGISRuntime.Toolkit.UWP.csproj
@@ -6,7 +6,7 @@
     <PackageTags>ArcGIS Cartography Geo Geographic Geography Geolocation Geospatial GIS Latitude Location Longitude Map Mapping Maps Places Spatial 3D  UWP toolkit</PackageTags>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <DefineConstants>$(DefineConstants);WINDOWS_XAML</DefineConstants>
+    <DefineConstants>$(DefineConstants);WINDOWS_XAML;NETFX_CORE</DefineConstants>
     <TargetPlatformVersion>$(UWPTargetPlatformVersion)</TargetPlatformVersion>
     <TargetPlatformMinVersion>$(UWPTargetPlatformMinVersion)</TargetPlatformMinVersion>
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
