Install maui workloads

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -17,6 +17,11 @@ jobs:
     
     - name: Setup Visual Studio Command Prompt
       uses: microsoft/setup-msbuild@v1.0.2
+       
+    - name: Install MAUI Workload
+      run: |
+        dotnet workload install maui@9.0.100
+        dotnet workload restore src/Toolkit/Toolkit.Maui/Esri.ArcGISRuntime.Toolkit.Maui.csproj --from-previous-sdk
 
     - name: Restore
       run: |
